# oxydllm

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-05-15.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cpu  README.md  SECURITY.md  build.rs  docker-compose.yml  install.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml  toolchains.yml
scripts/: stress_baseline.py
src/: chat_template.rs  constrain.rs  engine.rs  gpu_lock.rs  hf_hub.rs  main.rs  model.rs  model_manager.rs  sampling.rs  server.rs  telemetry.rs  tokenizer.rs
src/common/: attention.rs  awq.rs  block.rs  block.rs.save  config.rs  decode_profile.rs  expert_stream.rs  ffn.rs  ffn_kernels.metal  flash_attn.metal  gdn.rs  gdn_fixtures.json  gguf_weights.rs  kv_quant.rs  linear.rs  mask.rs  metal_ops.rs  mod.rs  moe.rs  mpp_gemm.metal  mxfp4.rs  norm.rs  paged.rs  prefix_cache.rs  quant_kernels.metal  rope.rs  weights.rs
src/model/: common.rs  traits.rs
src/model/common/: attention.rs  block.rs  config.rs  ffn.rs  kv_cache.rs  paged.rs  rope.rs  weights.rs
src/model/llama/: config.rs  model.rs
src/model/qwen3/: config.rs  model.rs
src/models/: arch_defaults.rs  arch_regression.rs  encoder.rs  encoder_fixtures.json  encoder_fixtures_qwen.json  estimate.rs  gguf_model.rs  hub.rs  loader.rs  manager.rs  mod.rs  traits.rs
src/models/llama/: config.rs  model.rs
src/models/parsers/: hf_parser.rs  mod.rs
src/models/qwen3/: config.rs  model.rs
src/scheduler/: mod.rs  sequence.rs
src/server/: routes.rs
src/server/routes/: chat.rs  embeddings.rs  engine_loop.rs  handlers.rs  http_compat_tests.rs  metrics.rs  mod.rs  types.rs
