[package]
name = "rllm"
version = "0.0.0-alpha.6"
edition = "2024"

[features]
default = ["metal"]
cuda  = ["candle-core/cuda"]
metal = ["candle-core/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
axum = "0.8.8"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", optional = true }
objc2-metal = { version = "0.3.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
minijinja = { version = "2.16.0", features = ["builtins"] }
minijinja-contrib = { version = "2.16.0", features = ["pycompat"] }
chrono = "0.4.44"
rayon = "1.11.0"
rustc-hash = "2.1.1"
