[package]
name = "oxydllm"
version = "0.0.0-alpha.12"
edition = "2024"

[features]
default = ["metal"]
cuda  = ["candle-core/cuda"]
metal = ["candle-core/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[[bin]]
name = "oxydllm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
axum = "0.8.9"
candle-core = { version = "0.10.2" }
candle-metal-kernels ={ version = "0.10.2", optional = true }
objc2-metal = { version = "0.3.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
minijinja = { version = "2.19.0", features = ["builtins"] }
minijinja-contrib = { version = "2.19.0", features = ["pycompat"] }
chrono = "0.4.44"
rustc-hash = "2.1.2"
lru = "0.18.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
prometheus = "0.14.0"
uuid = { version = "1.23.1", features = ["v4"] }
rayon = "1.12.0"
half = "2.7.1"
memmap2 = "0.9.10"

[dev-dependencies]
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
